--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -123,7 +123,7 @@ The schedule for the different curricula are listed here:
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Thursday 13 Oct </h3>
     <table class="table table-striped">
       <tr>
 	<td>Before starting</td>
@@ -136,10 +136,10 @@ The schedule for the different curricula are listed here:
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Friday 14 Oct</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Continuation of R: Data Analysis & Visualization</a></td></tr>
-      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-socialsci/">Data Management with SQL</a></td></tr>
+      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-socialsci/">Data Management and FAIR principles</a></td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
