--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -18,20 +18,20 @@ The schedule for the different curricula are listed here:
 	<td>Before starting</td>
 	<td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
-      <tr><td> </td><td><a href="https://librarycarpentry.org/lc-data-intro/01-regular-expressions/index.html">Regular Expressions</a></td></tr>
+      <tr><td>Morning</td> <td> <a href="https://librarycarpentry.org/lc-data-intro/01-regular-expressions/index.html">Regular Expressions</a></td></tr>
+      <tr><td> </td><td><a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
       <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
+      <tr><td> </td><td><a href="https://datacarpentry.org/r-socialsci/">Installing R</a></td></tr>
       <tr> <td>16:00</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Friday 14 Oct</h3>
     <table class="table table-striped">
-      <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Data Wrangling to Tidyverse</a></td></tr>
+      <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
+      <tr><td> </td><td><a href="https://datacarpentry.org/r-socialsci/">Data Wrangling to Tidyverse</a></td></tr>
       <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Data Analysis & Visualization</a></td></tr>
-      <tr>
-	<td>16:00</td>
+      <tr> <td>16:00</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
       <tr>
